--- a/render.yaml
+++ b/render.yaml
@@ -3,5 +3,63 @@ services:
     name: bagisto-store
     env: docker
     plan: free
+    region: frankfurt
     dockerfilePath: ./Dockerfile
     autoDeploy: true
+    envVars:
+      - key: APP_NAME
+        value: Bagisto
+      - key: APP_ENV
+        value: production
+      - key: APP_KEY
+        value: base64:/adKpJBm4oWJoT4DyetBvvbECgzqXYl26pY7gKJMtEo=
+      - key: APP_DEBUG
+        value: false
+      - key: APP_URL
+        value: https://ultrasoft.onrender.com
+      - key: APP_ADMIN_URL
+        value: admin
+      - key: APP_TIMEZONE
+        value: Asia/Riyadh
+      - key: APP_LOCALE
+        value: ar
+      
+      # Database Settings
+      - key: DB_CONNECTION
+        value: mysql
+      - key: DB_HOST
+        value: sql202.infinityfree.com
+      - key: DB_PORT
+        value: 3306
+      - key: DB_DATABASE
+        value: if0_38927646_db_bagist
+      - key: DB_USERNAME
+        value: if0_38927646
+      - key: DB_PASSWORD
+        value: asU2FgqaXF
+      
+      # Session & Cache
+      - key: SESSION_DRIVER
+        value: file
+      - key: CACHE_DRIVER
+        value: file
+      - key: FILESYSTEM_DISK
+        value: public
+      
+      # Mail (Example using Mailtrap)
+      - key: MAIL_MAILER
+        value: smtp
+      - key: MAIL_HOST
+        value: smtp.mailtrap.io
+      - key: MAIL_PORT
+        value: 2525
+      - key: MAIL_USERNAME
+        value: your_username
+      - key: MAIL_PASSWORD
+        value: your_password
+      - key: MAIL_ENCRYPTION
+        value: tls
+      - key: MAIL_FROM_ADDRESS
+        value: shop@example.com
+
+healthCheckPath: /
